# serializer version: 1
# name: TestPosterTemplate.test_topic_from_other_public_forum_in_topics_view[topic_from_other_public_forum_in_topics_view]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Alan T.
                  </a>,
              
              
                  dans <a href="forum_url">Abby's Forum</a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestPosterTemplate.test_topic_in_its_own_public_forum[topic_in_its_own_public_forum]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Dermot T.
                  </a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestPosterTemplate.test_topic_in_topics_view[topic_in_topics_view]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Jeff B.
                  </a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestTopicCreateCheckView.test_get_method[topic_create_check]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
              
      <section class="s-section" id="main_container">
          <div class="s-section__container container">
              
      <div class="row">
          <div class="col-12">
              <h1>forum</h1>
          </div>
      </div>
      <div class="row c-box">
          <div class="col-12 mb-5">
              <p class="h2">Quelle est ma situation ?</p>
          </div>
          <div class="col-12 col-md-6 mb-3">
              <div class="card c-card h-100">
                  <div class="card-header">
                      <h3 class="h4">Je suis à la recherche d'un emploi</h3>
                  </div>
                  <div class="card-body pb-0">
                      <p>Je recherche des offres d'emploi ou des entreprises près de chez moi</p>
                  </div>
                  <div class="card-footer text-center mt-3">
                      <button class="btn btn-primary matomo-event" data-bs-target="#rechercheEmploi" data-bs-toggle="modal" data-matomo-action="topic-create-check" data-matomo-category="engagement" data-matomo-option="itou-jobseeker" type="button">J'accède aux emplois de l'inclusion</button>
                  </div>
              </div>
          </div>
          <div class="col-12 col-md-6 mb-3">
              <div class="card c-card h-100">
                  <div class="card-header">
                      <h3 class="h4">J'utilise le site des emplois de l'inclusion</h3>
                  </div>
                  <div class="card-body pb-0">
                      <p>
                          J'ai des questions sur les PASS IAE, leur suspension ou prolongation, le fonctionnement du site des emplois de l'inclusion ou les relations avec l'ASP
                      </p>
                  </div>
                  <div class="card-footer text-center mt-3">
                      <a class="btn btn-primary matomo-event" data-matomo-action="topic-create-check" data-matomo-category="engagement" data-matomo-option="itou-helpdesk" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr">J'accède à la documentation des emplois de l'inclusion</a>
                  </div>
              </div>
          </div>
          <div class="col-12 col-md-6 mb-3">
              <div class="card c-card h-100">
                  <div class="card-header">
                      <h3 class="h4">J'accueille des personnes en PMSMP</h3>
                  </div>
                  <div class="card-body pb-0">
                      <p>
                          J'ai une question Période de Mise en Situation en Milieu Professionnel, le conventionnement, la déclaration des heures ou le fonctionnement du site Immersion Facilitée
                      </p>
                  </div>
                  <div class="card-footer text-center">
                      <a class="btn btn-primary matomo-event" data-matomo-action="topic-create-check" data-matomo-category="engagement" data-matomo-option="pmsmp" href="https://aide.immersion-facile.beta.gouv.fr/fr/">
                          J'accède au centre d'aide Immersion Facilitée
                      </a>
                  </div>
              </div>
          </div>
          <div class="col-12 col-md-6 mb-3">
              <div class="card c-card h-100">
                  <div class="card-header">
                      <h3 class="h4">Je suis un/une professionnel/le de l'insertion, en formation ou en activité</h3>
                  </div>
                  <div class="card-body pb-0">
                      <p>
                          J'ai une question sur l'accompagnement d'une personne éloignée de l'emploi, sur mon parcours de formation ou sur une des fiches pratiques de la communauté
                      </p>
                  </div>
                  <div class="card-footer text-center">
                      <a class="btn btn-primary matomo-event" data-matomo-action="topic-create-check" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/forum-[PK of Forum]/topic/create/?checked">Je pose ma question à la communauté</a>
                  </div>
              </div>
          </div>
      </div>
      <div aria-hidden="true" aria-labelledby="rechercheEmploiMiniLabel" class="modal modal--mini fade" id="rechercheEmploi" tabindex="-1">
          <div class="modal-dialog modal-dialog-centered">
              <div class="modal-content">
                  <div class="modal-header">
                      <h3 class="modal-title" id="rechercheEmploiLabel">
                          Vous recherchez un emploi à temps plein, à temps partiel ou en interim ?
                      </h3>
                      <button aria-label="Fermer" class="btn-close" data-bs-dismiss="modal" type="button"></button>
                  </div>
                  <div class="modal-body home-content-body">
                      <p class="mb-4">
                          Ce ne sera pas long !
                          <br/>
                          Inscrivez-vous et accédez à toutes les fonctionnalités du site des emplois de l'inclusion.
                      </p>
                      <ul class="mb-5">
                          <li class="d-flex mb-2">
                              <span>
                                  <i class="text-success ri-checkbox-circle-fill"></i>
                              </span>
                              <span class="font-weight-bold ml-2">Créer votre espace candidat</span>
                          </li>
                          <li class="d-flex mb-2">
                              <span>
                                  <i class="text-success ri-checkbox-circle-fill"></i>
                              </span>
                              <span class="font-weight-bold ml-2">Rechercher les offres d'emploi à proximité de votre ville</span>
                          </li>
                          <li class="d-flex mb-2">
                              <span>
                                  <i class="text-success ri-checkbox-circle-fill"></i>
                              </span>
                              <span class="font-weight-bold ml-2">Candidatez aux offres !</span>
                          </li>
                          <li class="d-flex mb-2">
                              <span>
                                  <i class="text-success ri-checkbox-circle-fill"></i>
                              </span>
                              <span class="font-weight-bold ml-2">N'oubliez pas de faire valider votre élégibilité par votre conseiller France Travail.</span>
                          </li>
                      </ul>
                      <p class="text-center">
                          <a class="btn btn-lg btn-primary" href="https://emplois.inclusion.beta.gouv.fr/signup/job_seeker/situation">Je crée mon espace candidat sur le site des emplois</a>
                      </p>
                  </div>
              </div>
          </div>
      </div>
  
          </div>
      </section>
  
          </main>
  '''
# ---
# name: TestTopicCreateView.test_redirections_on_documentation_forum[topic_create]
  '''
  <div class="form-group" id="div_id_content">
      
          <label class="control-label" for="id_content">
              Message
              
          </label>
      
      
          <textarea class="form-control" cols="40" id="id_content" name="content" placeholder="Entrez votre message" required="" rows="10"></textarea>
      
      
      
      
          
              <small class="form-text text-muted">
      <a aria-controls="collapseMentionsHelp" aria-expanded="false" data-bs-toggle="collapse" href="#collapseMentionsHelp" role="button">mention d'informations</a>
      sur les champs libres
  </small>
  <div class="collapse" id="collapseMentionsHelp">
      <div class="mb-3">
          <p>
              Nous vous demandons de ne pas nous transmettre d’informations sensibles. Notamment, ne communiquez pas vos opinions philosophiques, syndicales, politiques ou sur votre vie sexuelle. Ces données sont trop personnelles !
          </p>
      </div>
  </div>
  
          
      
  </div>
  '''
# ---
# name: TestTopicCreateView.test_redirections_on_forum[topic_create]
  '''
  <div class="form-group" id="div_id_content">
      
          <label class="control-label" for="id_content">
              Message
              
          </label>
      
      
          <textarea class="form-control" cols="40" id="id_content" name="content" placeholder="Entrez votre message" required="" rows="10"></textarea>
      
      
      
      
          
              <small class="form-text text-muted">
      <a aria-controls="collapseMentionsHelp" aria-expanded="false" data-bs-toggle="collapse" href="#collapseMentionsHelp" role="button">mention d'informations</a>
      sur les champs libres
  </small>
  <div class="collapse" id="collapseMentionsHelp">
      <div class="mb-3">
          <p>
              Nous vous demandons de ne pas nous transmettre d’informations sensibles. Notamment, ne communiquez pas vos opinions philosophiques, syndicales, politiques ou sur votre vie sexuelle. Ces données sont trop personnelles !
          </p>
      </div>
  </div>
  
          
      
  </div>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[discussion_area_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
                  
              
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/forum-b-[PK of Forum]/">Forum B</a>
                  </li>
              
          </ol>
      </nav>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[discussion_area_toplevel_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
              
          </ol>
      </nav>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[documentation_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  
              </li>
              
                  
                      <li class="breadcrumb-item">
                          <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/d-category-[PK of Forum]/">D Category</a>
                      </li>
                  
              
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/d-category-forum-[PK of Forum]/">D Category - Forum</a>
                  </li>
              
          </ol>
      </nav>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[newsfeed_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="newsfeed_breadcrumb" href="/news/">Actualités</a>
                  
              </li>
              
              
          </ol>
      </nav>
  '''
# ---
# name: test_queryset_for_tagged_topic[tagged_topic]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">1 question
                          avec l'étiquette buckley
                      </span>
                  </div>
  '''
# ---
# name: test_queryset_for_tagged_topic[tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">2 questions
                          avec l'étiquette buckley
                      </span>
                  </div>
  '''
# ---
